test/files/neg/t10785.check
t10785.scala:6: error: type mismatch;
 found   : String
 required: scala.util.Either[?,?]
    y <- 1 + x
      ^
1 error
